# Generative_Illust_Platform

./: .gitignore  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  docs.md  feature.md  hotfix.md  release.md
.github/extensions/: extensions.txt
comfy-docker/: docker-compose.yml
configs/gui/: MeinaMix_v12_sample.json
configs/lora/: char_lora.toml  style_lora.toml
docs/architecture/: dir_trees.md
docs/design/: SPEC.md
docs/rules/: datasets.md
docs/tutorial/: bench_sweep.md  comfyui.md  convert_raw_to_png.md  image_resize.md  kohya.md  pipeline_run.md
kohya-docker/: Dockerfile  docker-compose.yml  run_lora.sh
scripts/: bench_sweep.py  comfy_docker.py  convert_raw_to_png.py  fix_datasets_owner.bash  pipeline_run.py  resize_dataset.py  run_lora.bash
scripts/kohya/: train_lora.bash
scripts/modules/: bench_utils.py  comfy_client.py
